chore: fix dependencies proto
