# proto/gen/go/chat/chat.swagger.json
@@ -16,9 +16,9 @@
     "application/json"
   ],
   "paths": {
-    "/api/chat/upgrade": {
-      "get": {
-        "operationId": "ChatService_Upgrade",
+    "/v1/chat/broadcast": {
+      "post": {
+        "operationId": "ChatService_BroadcastMessage",
         "responses": {
           "200": {
             "description": "A successful response.(streaming responses)",
@@ -42,37 +42,36 @@
             }
           }
         },
-        "tags": [
-          "ChatService"
-        ]
-      }
-    },
-    "/chat.ChatService/BroadcastMessage": {
-      "post": {
-        "operationId": "ChatService_BroadcastMessage",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "type": "object",
-              "properties": {}
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
         "parameters": [
           {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/chatMessage"
-            }
+            "name": "User.id",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "User.username",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "User.email",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "message",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "timestamp",
+            "in": "query",
+            "required": false,
+            "type": "string"
           }
         ],
         "tags": [
